--- a/themes/octo/layout/partials/navigation.ejs
+++ b/themes/octo/layout/partials/navigation.ejs
@@ -1,5 +1,5 @@
 <nav role="navigation">
-    <% if (theme.atom) { %>
+    <% if (theme.atom && 0) { %>
         <ul class="subscription" data-subscription="rss">
             <li><a href="/atom.xml" rel="subscribe-rss" title="subscribe via RSS">RSS</a></li>
         </ul>
