--- a/themes/octo/layout/layout.ejs
+++ b/themes/octo/layout/layout.ejs
@@ -81,9 +81,8 @@ var thisYear = new Date().getFullYear();
 </div>
 
 <footer role="contentinfo">
-    <p>
-        Copyright © <%= thisYear %> - <%= config.author %> -
-        <span class="credit">Generated using <a href="https://github.com/jbreckmckye/hexo-theme-octo">Octo theme</a> for <a href="http://hexo.io">Hexo</a></span>
+    <p align='center'>
+        Copyright © <%= thisYear %> - <%= config.author %>
     </p>
 </footer>
 
